--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .card {
@@ -67,5 +68,11 @@ img {
     margin: 1.5rem 0 1.5rem 0;
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+.attribution { font-size: 11px; text-align: center; color: var(--slate900)}
+.attribution a { color: var(--slate500); }
